fix blog card overflow hiddens card hover effect

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -168,6 +168,7 @@ a {
 
 /* Card */
 .card-list .card {
+  width: 33.33%;
   display: flex;
   flex-direction: column;
   transition: ease-in-out 150ms;
@@ -761,7 +762,17 @@ a {
   margin-top: 1.6rem;
 }
 
+.blog .card-page {
+  display: flex;
+  gap: 3rem;
+  width: 100%;
+  padding: 0 3rem;
+  overflow-x: clip;
+}
+
 .blog .card-list {
+  width: 100%;
+  flex-shrink: 0;
   margin-top: 5.5rem;
 }
 
